refactor(operation-log): 优化操作日志核心功能与仪表板实现
- 将 OperationLogContext.follow() 方法重命名为 followIfRecordExists()
- 为 OperationLogContext 添加 markFailIfRecordExists() 和相关兼容方法
- 重构 DashboardDataService 中的注释风格统一使用块注释
- 简化 DashboardDataService 中未实现功能的占位符代码
- 优化 HeatmapServiceImpl 中的资源管理和 TopN 查询逻辑
- 移除 LogAspect 中不必要的导入和注释清理
- 重构 ProfileCollector 中的参数声明和空值检查
- 优化 RedisFailoverManager 中的健康检查线程池管理
- 统一 UserAnalysisService 中的代码注释风格